# tee-fusion-repo

./: .gitignore  CMakeLists.txt  README.md  my_recent_build_cmd.txt
adapters/: adapter_iface.h
adapters/keystone/: adapter_init.c
adapters/optee/: adapter_init.c  optee_fusion_ta.h  optee_fusion_ta_uuid.h
adapters/tdx/: adapter_init.c
core/evidence/: mapping.c
examples/optee_smoke/: smoke.c
examples/optee_smoke_guest/: smoke_guest.c
include/: fusion_abi.h
include/secure_sapi/: sapi.h
optee/ta/: .optee_fusion_ta.o.cmd  .optee_fusion_ta.o.d  .ta.ld.d  .ta_entry_a32.o.cmd  .ta_entry_a32.o.d  .user_ta_header.o.cmd  .user_ta_header.o.d  7a9b3b24-3e2f-4d5f-912d-8b7c1355629a.dmp  7a9b3b24-3e2f-4d5f-912d-8b7c1355629a.elf  7a9b3b24-3e2f-4d5f-912d-8b7c1355629a.map  7a9b3b24-3e2f-4d5f-912d-8b7c1355629a.stripped.elf  7a9b3b24-3e2f-4d5f-912d-8b7c1355629a.ta  Makefile  optee_fusion_ta.c  sub.mk  ta.lds  ta_entry.c  user_ta_header_defines.h
scripts/: gencert.sh  install_deps_ubuntu.sh  optee_guest_build.sh  optee_qemu_v8_setup.sh
secure_app/: fusion_secure.c  fusion_secure.h
secure_sapi/optee/: sapi_optee.c
